--- a/css/style.css
+++ b/css/style.css
@@ -940,4 +940,107 @@ template {
 .terms-list__subtitle::marker {
   color: #3EEFA1;
 }
+
+.support {
+  padding: 0px 16px;
+}
+
+.support-wrap {
+  padding-top: 150px;
+}
+
+.support-title {
+  color: #3EEFA1;
+  text-align: center;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 120%;
+}
+
+.support-subtitle {
+  color: #8c8c8c;
+  font-size: 16px;
+  font-weight: 400;
+  text-align: center;
+  line-height: 120%;
+}
+
+.support-form {
+  margin: 50px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 500px;
+}
+
+.support-form__input {
+  background-color: #191919;
+  margin-bottom: 16px;
+  padding: 22px 16px;
+  border: none;
+  border-radius: 16px;
+  color: #fff;
+}
+
+.support-form__input::-webkit-input-placeholder {
+  color: #8c8c8c;
+  font-size: 16px;
+}
+
+.support-form__input:-ms-input-placeholder {
+  color: #8c8c8c;
+  font-size: 16px;
+}
+
+.support-form__input::-ms-input-placeholder {
+  color: #8c8c8c;
+  font-size: 16px;
+}
+
+.support-form__input::placeholder {
+  color: #8c8c8c;
+  font-size: 16px;
+}
+
+.support-form__input:focus {
+  outline: 1px solid #3EEFA1;
+}
+
+.support-form__area {
+  line-height: 120%;
+  font-size: 16px;
+  color: #ffffff;
+  background-color: #191919;
+  border: none;
+  border-radius: 16px;
+  padding: 22px 16px;
+  resize: vertical;
+  height: 150px;
+}
+
+.support-form__area:focus {
+  outline: 1px solid #3EEFA1;
+}
+
+.support-form__btn {
+  margin-top: 32px;
+  padding: 22px 16px;
+  border: none;
+  border-radius: 16px;
+  background-color: #3EEFA1;
+  color: #191919;
+  font-weight: 700;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.support-form__btn:hover {
+  cursor: pointer;
+  -webkit-box-shadow: 10px 13px 25px -8px rgba(96, 238, 176, 0.23);
+          box-shadow: 10px 13px 25px -8px rgba(96, 238, 176, 0.23);
+}
 /*# sourceMappingURL=style.css.map */
