add before green in main

--- a/css/style.css
+++ b/css/style.css
@@ -539,6 +539,22 @@ template {
           justify-content: center;
 }
 
+.main-wrap::before {
+  content: '';
+  position: absolute;
+  top: 30%;
+  left: 35%;
+  right: 50%;
+  bottom: 50%;
+  width: 332px;
+  height: 332px;
+  background-color: #3EEFA1;
+  border-radius: 200px;
+  opacity: 0.2;
+  -webkit-filter: blur(200px);
+          filter: blur(200px);
+}
+
 .main-title {
   font-size: 130px;
   font-weight: 700;
@@ -564,6 +580,10 @@ template {
   .main-wrap {
     padding-bottom: 350px;
   }
+  .main-wrap::before {
+    width: 200px;
+    height: 200px;
+  }
   .main-title {
     font-size: 90px;
   }
@@ -572,6 +592,10 @@ template {
 @media (max-width: 425px) {
   .main-wrap {
     padding-bottom: 280px;
+  }
+  .main-wrap::before {
+    width: 150px;
+    height: 150px;
   }
   .main-title {
     display: none;
